<resources>
    <string name="app_name">GameProject</string>
    <string name="button_play">Play</string>
    <string name="headset_volume">Headset Volume</string>
    <string name="speaker_volume">Speaker Volume</string>
    <string name="headset_volume_key">headset_key</string>
    <string name="speaker_volume_key">speaker_key</string>
    <string name="button_settings">Settings</string>
    <string name="shared_pref_key">prefs</string>
    <string name="accelerometer_key">accelerometer_mode</string>
    <string name="sensitivity_key">acc_sensitivity</string>
    <string name="volume_text">Volume</string>
    <string name="accessibility_text">Accessibility</string>
    <string name="accelerometer_text">Use Accelerometer</string>
    <string name="acc_sensitivity_text">Accelerometer Sensitivity</string>
    <string name="directions_text">Show movement and shot directions</string>
    <string name="credits_text">Created by Richard \"Mitochondrion\" Stroev</string>
    <string name="repo_text">GitHub Repository: https://github.com/Mitochondrion1/GameProject</string>
    <string name="button_credits">Credits</string>
    <string name="direction_display_key">display_directions</string>
    <string name="dialog_game_over">You Ded!</string>
    <string name="restart">Start Over</string>
    <string name="to_menu">To Menu</string>
    <string name="dialog_game_over_title">Game Over</string>
    <string name="dialog_level_end_title">Level Complete</string>
    <string name="button_continue">Continue</string>
    <string name="highest_level_key">highest_level</string>
    <string name="most_kills_key">most_kills</string>
    <string name="high_scores_text">High Scores</string>
    <string name="highest_level_text">Highest Level</string>
    <string name="most_kills_text">Most Kills</string>
    <string name="button_play_he">שחק</string>
    <string name="button_settings_he">הגדרות</string>
    <string name="button_credits_he">אודות</string>
    <string name="high_scores_text_he">שיאים</string>
    <string name="volume_text_he">עוצמה</string>
    <string name="accessibility_text_he">נגישות</string>
    <string name="to_menu_he">לתפריט הראשי</string>
    <string name="headset_volume_he">עוצמת אוזניות</string>
    <string name="speaker_volume_he">עוצמת רמקולים</string>
    <string name="accelerometer_text_he">השתמש באקסלרומטר</string>
    <string name="directions_text_he">הצג כיווני תנוע וירייה</string>
    <string name="acc_sensitivity_text_he">רגישות אקסלרומטר</string>
    <string name="dialog_game_over_he">אתה ז\"ל!</string>
    <string name="dialog_game_over_title_he">המשחק נגמר</string>
    <string name="restart_he">שחק מחדש</string>
    <string name="button_continue_he">המשך</string>
    <string name="dialog_level_end_title_he">סיימת שלב</string>
    <string name="language_text">Language</string>
    <string name="language_text_he">שפה</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Hebrew</item>
    </string-array>
    <string-array name="languages_array_he">
        <item>אנגלית</item>
        <item>עברית</item>
    </string-array>
    <string name="language_key">language</string>
</resources>