<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/settings_button"
        android:layout_width="162dp"
        android:layout_height="76dp"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="284dp"
        android:layout_marginRight="284dp"
        android:layout_marginBottom="92dp"
        android:onClick="openSettings"
        android:text="@string/button_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="162dp"
        android:layout_height="76dp"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="285dp"
        android:layout_marginRight="285dp"
        android:layout_marginBottom="168dp"
        android:onClick="play"
        android:text="@string/button_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="226dp"
        android:layout_marginLeft="226dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:layout_marginBottom="264dp"
        android:text="@string/app_name"
        android:textColor="@color/teal_200"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>