<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <SeekBar
        android:id="@+id/speakerVol"
        android:layout_width="402dp"
        android:layout_height="32dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="1"
        android:max="100"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/headsetVol"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/headsetVol"
        android:layout_width="402dp"
        android:layout_height="32dp"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="1"
        android:max="100"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="217dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/speaker_volume"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/volume_text"
        android:textColor="#00BCD4"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="217dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/headset_volume"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>